# CppBuildTasks-Validation

./: .gitattribute  .gitignore  CMakeLists.txt  README.md
cmakelists.txt/: CMakeLists.txt  macos-hosted-basic-cache-noupdate_vcpkg.yml  macos-hosted-basic-cache-submod_vcpkg.yml  macos-hosted-basic-cache.yml  macos-hosted-basic-noupdate_vcpkg.yml  macos-hosted-basic.yml  test.cpp  ubuntu-hosted-basic-cache-noupdate_vcpkg.yml  ubuntu-hosted-basic-cache-submod_vcpkg.yml  ubuntu-hosted-basic-cache.yml  ubuntu-hosted-basic-noupdate_vcpkg.yml  ubuntu-hosted-basic.yml  vcpkg_x64-linux.txt  vcpkg_x64-osx.txt  vs2017-hosted-basic-cache-submod_vcpkg.yml  vs2017-hosted-basic-cache.yml  vs2017-hosted-basic.yml  vs2019-hosted-basic-cache-noupdate_vcpkg.yml  vs2019-hosted-basic-cache-submod_vcpkg.yml  vs2019-hosted-basic-cache.yml  vs2019-hosted-basic-noupdate_vcpkg.yml  vs2019-hosted-basic.yml
cmakeliststxt/: CMakeLists.txt  macos-hosted-basic-cache-noupdate_vcpkg.yml  macos-hosted-basic-cache-submod_vcpkg.yml  macos-hosted-basic-cache.yml  macos-hosted-basic.yml  ubuntu-hosted-basic-cache-noupdate_vcpkg.yml  ubuntu-hosted-basic-cache-submod_vcpkg.yml  ubuntu-hosted-basic-cache.yml  ubuntu-hosted-basic.yml  vs2017-hosted-basic-cache-submod_vcpkg.yml  vs2017-hosted-basic-cache.yml  vs2017-hosted-basic.yml  vs2019-hosted-basic-cache-noupdate_vcpkg.yml  vs2019-hosted-basic-cache-submod_vcpkg.yml  vs2019-hosted-basic-cache.yml  vs2019-hosted-basic.yml
cmakepresets/: CMakeLists.txt  CMakePresets.json  vcpkg.json
cmakepresets+vcpkgconfjson/: CMakeLists.txt  main.cpp  vcpkg.json  (+1 more)
(+77 files in other folders)
